--- a/frontend-client/src/pages/index.astro
+++ b/frontend-client/src/pages/index.astro
@@ -74,6 +74,7 @@ const themeMode = restaurant.theme_mode || "v1-urban";
 	enablePickup={restaurant.enable_pickup}
 	enableDelivery={restaurant.enable_delivery}
 	restaurantId={restaurant.id}
+	restaurantSlug={restaurant.slug}
 	menuMode={restaurant.menu_mode || "INTERACTIVE"}
 >
 	{/* HEADER FIJO */}
